[package]
name = "CodeFlow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.22.0"
serde = { version = "1.0", features = ["derive"] }
tracing-subscriber = "0.3"
gluten = "0.30.10"
gluten-winit = "0.3.0"
winapi = "0.3.9"
libloading = "0.7.4"